# MaxOw.github.io

./: .gitignore  .travis.yml  blog.cabal  blog.nix  cv.html  default.nix  hakyll.hs  hireme.html  index.html  index.md  posts.html  publish.sh
bib/: refs.bib
csl/: acm-siggraph.csl
css/: base.css  custom.css  syntax.css
other/: cv.md  hireme.md
posts/: computational-geometry-set-operations-on-polytopes.html  computational-geometry-set-operations-on-polytopes.md  creating-a-desktop-application-with-threepenny-gui-and-cef3.html  creating-a-desktop-application-with-threepenny-gui-and-cef3.md
templates/: citations.html  cv.html  cv.tex  default.html  list.html  nav.html
