name:                blog
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

executable blog
  default-language:    Haskell2010
  main-is:             hakyll.hs
  ghc-options:         -O2 -Wall

  build-depends: base
               , hakyll
               , pandoc
               , pandoc-citeproc
               , process
               , filepath
